Ts 138 add test coverage (#156)
* ts-138: small fixes while checking coverage

* ts-138: 100% test coverage